--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "coding-challenge-frontend-task-3",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,27 +13,46 @@
     "@chakra-ui/react": "2.8.2",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "@rainbow-me/rainbowkit": "2.0.5",
-    "@tanstack/react-query": "5.28.14",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@rainbow-me/rainbowkit": "^2.1.6",
+    "@tanstack/react-query": "^5.55.4",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "framer-motion": "11.0.25",
-    "next": "12.3.4",
+    "framer-motion": "^11.5.4",
+    "lucide-react": "^0.439.0",
+    "next": "14.2.9",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "siwe": "2.1.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "siwe": "^2.3.2",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6",
-    "viem": "2.9.9",
-    "wagmi": "2.5.19"
+    "viem": "^2.21.4",
+    "wagmi": "^2.12.9",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "sass": "^1.66.1"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.9"
   }
 }
